0.4.2:
Joe Valenzuela - Wed Oct  4 12:07:51 PDT 2000
 * Added a configure option --disable-thread-audio
Sam Lantinga - Wed Oct  4 10:12:58 PDT 2000
 * Fixed various compiler warnings
Vivien Chappelier - Mon, 25 Sep 2000 20:37:43 +0200
 * Added abstraction support for hardware acceleration (no card support yet)
Hiroshi Yamashita - Sat, 19 Aug 2000 00:22:25 +0900
 * Fixed lseek problem on FreeBSD

0.4.1:
Vivien Chappelier - Sat Sep 23 17:48:59 PDT 2000
 * Updated for SDL 1.1.5 and ATI hardware accelerated overlays
Richard Kim - Thu Sep 21 11:28:31 PDT 2000
 * Fixed read buffer memory leak in MPEGsystem class
Tim Jansen - Thu Sep 21 11:13:06 PDT 2000
 * Fixed potential stack corruption in MPEG level 3 audio decoding
Sam Lantinga - Wed Sep  6 03:04:12 PDT 2000
 * Various Visual C++ cleanups, DirectX hardware acceleration with SDL
Sam Lantinga - Tue Sep  5 18:53:34 PDT 2000
 * Added the --bilinear command line option to plaympeg for filtering
Tim Janson - Tue Sep  5 18:05:18 PDT 2000
 * Fixed potential divide-by-zero with some illegal audio streams
Sam Lantinga - Tue Sep  5 14:09:14 PDT 2000
 * Changed gtv to perform bilinear filtering instead of deblocking
Sam Lantinga - Tue Sep  5 13:39:36 PDT 2000
 * Changed the filters to C implementations instead of C++ implementations
Vivien Chappelier - Tue Sep  5 12:09:10 PDT 2000
 * Fixed crash with MPEG files containing audio frames in multiple layers
 * Fixed crash when looping system streams
 * Added video filter code
 * Implemented a copy filter (default filter)
 * Implemented a bilinear filter
 * Implemented a subtle de-blocking filter
 * Improved the motion detection code, crashes/hangs on fewer MPEG movies
Ray Kelm - Fri, 04 Aug 2000 20:58:00 -0400
 * Added support for cross-compiling Windows DLL from Linux
Joe Valenzuela - Wed Aug  9 12:05:13 PDT 2000
 * Added SMPEG_new_data() to play MPEG data already in memory
Vivien Chappelier - Sun Jul 23 13:48:33 2000
 * Added the total time of an MPEG to the information structure